# Sudoku-THRML-Solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.py
src/: __init__.py  app.py  cli.py  puzzle_generator.py  solver.py  sudoku_model.py
src/static/: script.js  style.css
src/templates/: index.html
tests/: test_solver.py
