[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thrml-sudoku-solver"
version = "0.1.0"
description = "Scalable Sudoku solver using THRML's energy-based models and block Gibbs sampling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "thrml>=0.1.3",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
]

[project.scripts]
sudoku-solver = "src.cli:main"
